--- a/public/admin.html
+++ b/public/admin.html
@@ -1,103 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<title>Админка</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
-<div class="container py-4">
-<h1 class="text-center mb-4">Админ-панель</h1>
-
-<section>
-<h3>Информация о магазине</h3>
-<form id="storeForm" class="mb-3">
-  <input type="text" name="name" placeholder="Название" class="form-control mb-2">
-  <input type="text" name="inn" placeholder="ИНН" class="form-control mb-2">
-  <input type="text" name="address" placeholder="Адрес" class="form-control mb-2">
-  <input type="email" name="email" placeholder="Email" class="form-control mb-2">
-  <input type="tel" name="phone" placeholder="Телефон" class="form-control mb-2">
-  <button class="btn btn-primary">Сохранить</button>
+<form id="productForm" enctype="multipart/form-data">
+  <input type="hidden" name="id">
+  <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="title" required></div>
+  <div class="mb-3"><label class="form-label">Описание</label><textarea class="form-control" name="description"></textarea></div>
+  <div class="mb-3"><label class="form-label">Цена</label><input type="number" class="form-control" name="price" required></div>
+  <div class="mb-3"><label class="form-label">Фото товара</label><input type="file" class="form-control" name="image"></div>
+  <div class="mb-3"><label class="form-label">Категория</label><select class="form-select" name="category_id"></select></div>
+  <button type="submit" class="btn btn-primary w-100">Сохранить</button>
 </form>
-</section>
 
-<section>
-<h3>Категории</h3>
-<input type="text" id="newCategory" placeholder="Новая категория" class="form-control mb-2">
-<button class="btn btn-success mb-3" id="addCategoryBtn">Добавить</button>
-<ul id="categoryList" class="list-group"></ul>
-</section>
-
-<section>
-<h3>Товары</h3>
-<button class="btn btn-success mb-3" id="addProductBtn">Добавить товар</button>
-<div id="productList" class="row g-3"></div>
-</section>
-
-<section>
-<h3>Пользователи</h3>
-<ul id="userList" class="list-group"></ul>
-</section>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-const ADMIN_TOKEN = 'SUPER_SECRET_TOKEN';
-
-async function loadStore(){
-  const res = await fetch('/api/store_info'); const data = await res.json();
-  const form = document.getElementById('storeForm');
-  form.name.value = data.name||''; form.inn.value = data.inn||''; form.address.value = data.address||'';
-  form.email.value = data.email||''; form.phone.value = data.phone||'';
-}
-document.getElementById('storeForm').addEventListener('submit', async e=>{
+document.getElementById('productForm').addEventListener('submit', async e => {
   e.preventDefault();
   const form = e.target;
-  const data = {name:form.name.value,inn:form.inn.value,address:form.address.value,email:form.email.value,phone:form.phone.value};
-  await fetch('/api/store_info',{method:'POST', headers:{'x-admin-token':ADMIN_TOKEN,'Content-Type':'application/json'}, body:JSON.stringify(data)});
-  alert('Сохранено');
+  const formData = new FormData(form); // включает файл
+  const id = form.id.value;
+  const url = id ? `/api/products/${id}` : '/api/products';
+  const method = id ? 'PUT' : 'POST';
+  
+  await fetch(url, {
+    method,
+    headers: { 'x-admin-token': 'SUPER_SECRET_TOKEN' },
+    body: formData
+  });
+  
+  form.reset();
+  productModal.hide();
+  loadProducts(); // обновляем список
 });
-
-async function loadCategories(){
-  const res = await fetch('/api/categories'); const data = await res.json();
-  const list = document.getElementById('categoryList'); list.innerHTML='';
-  data.forEach(c=>{
-    const li = document.createElement('li'); li.className='list-group-item d-flex justify-content-between align-items-center';
-    li.textContent=c.name;
-    const del = document.createElement('button'); del.className='btn btn-sm btn-danger'; del.textContent='Удалить';
-    del.onclick = async()=>{ await fetch('/api/categories/'+c.id,{method:'DELETE',headers:{'x-admin-token':ADMIN_TOKEN}}); loadCategories();}
-    li.appendChild(del); list.appendChild(li);
-  });
-}
-document.getElementById('addCategoryBtn').addEventListener('click', async ()=>{
-  const name = document.getElementById('newCategory').value;
-  if(!name) return alert('Введите имя категории');
-  await fetch('/api/categories',{method:'POST', headers:{'x-admin-token':ADMIN_TOKEN,'Content-Type':'application/json'},body:JSON.stringify({name})});
-  document.getElementById('newCategory').value='';
-  loadCategories();
-});
-
-async function loadProducts(){
-  const res = await fetch('/api/products'); const data = await res.json();
-  const list = document.getElementById('productList'); list.innerHTML='';
-  data.forEach(p=>{
-    const div = document.createElement('div'); div.className='col-4 card p-2';
-    div.innerHTML=`<img src="${p.image_url}" class="img-fluid mb-2"><h5>${p.title}</h5><p>${p.description}</p><b>${p.price} ₽</b>`;
-    list.appendChild(div);
-  });
-}
-
-async function loadUsers(){
-  const res = await fetch('/api/users',{headers:{'x-admin-token':ADMIN_TOKEN}}); const data=await res.json();
-  const list=document.getElementById('userList'); list.innerHTML='';
-  data.forEach(u=>{
-    const li=document.createElement('li'); li.className='list-group-item';
-    li.textContent=`${u.name} | ${u.email} | ${u.phone}`;
-    list.appendChild(li);
-  });
-}
-
-loadStore(); loadCategories(); loadProducts(); loadUsers();
 </script>
-</body>
-</html>
