--- a/public/admin.html
+++ b/public/admin.html
@@ -1,30 +1,200 @@
-<form id="productForm" enctype="multipart/form-data">
-  <input type="hidden" name="id">
-  <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="title" required></div>
-  <div class="mb-3"><label class="form-label">Описание</label><textarea class="form-control" name="description"></textarea></div>
-  <div class="mb-3"><label class="form-label">Цена</label><input type="number" class="form-control" name="price" required></div>
-  <div class="mb-3"><label class="form-label">Фото товара</label><input type="file" class="form-control" name="image"></div>
-  <div class="mb-3"><label class="form-label">Категория</label><select class="form-select" name="category_id"></select></div>
-  <button type="submit" class="btn btn-primary w-100">Сохранить</button>
-</form>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Админка магазина</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light">
 
+<div class="container py-4">
+  <h1 class="mb-4">Админка магазина</h1>
+
+  <!-- Store Info -->
+  <div class="card mb-4">
+    <div class="card-header">Информация о магазине</div>
+    <div class="card-body">
+      <form id="storeForm">
+        <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="name" required></div>
+        <div class="mb-3"><label class="form-label">ИНН</label><input type="text" class="form-control" name="inn"></div>
+        <div class="mb-3"><label class="form-label">Адрес</label><input type="text" class="form-control" name="address"></div>
+        <div class="mb-3"><label class="form-label">Email</label><input type="email" class="form-control" name="email"></div>
+        <div class="mb-3"><label class="form-label">Телефон</label><input type="text" class="form-control" name="phone"></div>
+        <button type="submit" class="btn btn-success">Сохранить</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Categories -->
+  <div class="card mb-4">
+    <div class="card-header d-flex justify-content-between align-items-center">
+      Категории
+      <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#categoryModal">Добавить категорию</button>
+    </div>
+    <div class="card-body">
+      <ul id="categoriesList" class="list-group"></ul>
+    </div>
+  </div>
+
+  <!-- Products -->
+  <div class="card mb-4">
+    <div class="card-header d-flex justify-content-between align-items-center">
+      Товары
+      <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#productModal">Добавить товар</button>
+    </div>
+    <div class="card-body">
+      <table class="table table-striped">
+        <thead>
+          <tr><th>Фото</th><th>Название</th><th>Категория</th><th>Цена</th><th>Действия</th></tr>
+        </thead>
+        <tbody id="productsList"></tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<!-- Category Modal -->
+<div class="modal fade" id="categoryModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="categoryForm">
+        <div class="modal-header">
+          <h5 class="modal-title">Добавить категорию</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="text" class="form-control" name="name" placeholder="Название категории" required>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Сохранить</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- Product Modal -->
+<div class="modal fade" id="productModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="productForm" enctype="multipart/form-data">
+        <div class="modal-header">
+          <h5 class="modal-title">Добавить/Редактировать товар</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" name="id">
+          <div class="mb-3"><label class="form-label">Название</label><input type="text" class="form-control" name="title" required></div>
+          <div class="mb-3"><label class="form-label">Описание</label><textarea class="form-control" name="description"></textarea></div>
+          <div class="mb-3"><label class="form-label">Цена</label><input type="number" class="form-control" name="price" required></div>
+          <div class="mb-3"><label class="form-label">Фото товара</label><input type="file" class="form-control" name="image"></div>
+          <div class="mb-3"><label class="form-label">Категория</label><select class="form-select" name="category_id" required></select></div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Сохранить</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-document.getElementById('productForm').addEventListener('submit', async e => {
+const ADMIN_TOKEN = 'SUPER_SECRET_TOKEN';
+const categoryModal = new bootstrap.Modal(document.getElementById('categoryModal'));
+const productModal = new bootstrap.Modal(document.getElementById('productModal'));
+
+// --- Load store info ---
+async function loadStoreInfo(){
+  const res = await fetch('/api/store_info');
+  const data = await res.json();
+  const form = document.getElementById('storeForm');
+  Object.keys(data || {}).forEach(key => { if(form[key]) form[key].value = data[key]; });
+}
+document.getElementById('storeForm').addEventListener('submit', async e => {
   e.preventDefault();
   const form = e.target;
-  const formData = new FormData(form); // включает файл
+  const body = Object.fromEntries(new FormData(form));
+  await fetch('/api/store_info', {method:'POST', headers:{'Content-Type':'application/json','x-admin-token':ADMIN_TOKEN}, body:JSON.stringify(body)});
+  alert('Сохранено');
+});
+loadStoreInfo();
+
+// --- Categories ---
+async function loadCategories(){
+  const res = await fetch('/api/categories');
+  const categories = await res.json();
+  const list = document.getElementById('categoriesList');
+  const select = document.querySelector('#productForm select[name=category_id]');
+  list.innerHTML = '';
+  select.innerHTML = '';
+  categories.forEach(cat=>{
+    list.innerHTML += `<li class="list-group-item d-flex justify-content-between align-items-center">
+      ${cat.name} 
+      <button class="btn btn-sm btn-danger" onclick="deleteCategory(${cat.id})">Удалить</button>
+    </li>`;
+    select.innerHTML += `<option value="${cat.id}">${cat.name}</option>`;
+  });
+}
+async function deleteCategory(id){
+  if(confirm('Удалить категорию?')){
+    await fetch('/api/categories/'+id,{method:'DELETE', headers:{'x-admin-token':ADMIN_TOKEN}});
+    loadCategories();
+  }
+}
+document.getElementById('categoryForm').addEventListener('submit', async e=>{
+  e.preventDefault();
+  const name = e.target.name.value;
+  await fetch('/api/categories',{method:'POST', headers:{'Content-Type':'application/json','x-admin-token':ADMIN_TOKEN}, body:JSON.stringify({name})});
+  e.target.reset(); categoryModal.hide(); loadCategories();
+});
+loadCategories();
+
+// --- Products ---
+async function loadProducts(){
+  const res = await fetch('/api/products');
+  const products = await res.json();
+  const tbody = document.getElementById('productsList');
+  tbody.innerHTML = '';
+  products.forEach(p=>{
+    tbody.innerHTML += `<tr>
+      <td>${p.image_url ? `<img src="${p.image_url}" width="50">` : ''}</td>
+      <td>${p.title}</td>
+      <td>${p.category_id}</td>
+      <td>${p.price}</td>
+      <td>
+        <button class="btn btn-sm btn-warning" onclick="editProduct(${p.id})">Редактировать</button>
+        <button class="btn btn-sm btn-danger" onclick="deleteProduct(${p.id})">Удалить</button>
+      </td>
+    </tr>`;
+  });
+}
+window.editProduct = async function(id){
+  const res = await fetch('/api/products');
+  const product = (await res.json()).find(p=>p.id===id);
+  const form = document.getElementById('productForm');
+  Object.keys(product).forEach(k=>{ if(form[k]) form[k].value = product[k]; });
+  productModal.show();
+}
+window.deleteProduct = async function(id){
+  if(confirm('Удалить товар?')){
+    await fetch('/api/products/'+id,{method:'DELETE', headers:{'x-admin-token':ADMIN_TOKEN}});
+    loadProducts();
+  }
+}
+document.getElementById('productForm').addEventListener('submit', async e=>{
+  e.preventDefault();
+  const form = e.target;
+  const formData = new FormData(form);
   const id = form.id.value;
   const url = id ? `/api/products/${id}` : '/api/products';
   const method = id ? 'PUT' : 'POST';
-  
-  await fetch(url, {
-    method,
-    headers: { 'x-admin-token': 'SUPER_SECRET_TOKEN' },
-    body: formData
-  });
-  
-  form.reset();
-  productModal.hide();
-  loadProducts(); // обновляем список
+  await fetch(url,{method, headers:{'x-admin-token':ADMIN_TOKEN}, body:formData});
+  form.reset(); productModal.hide(); loadProducts();
 });
+loadProducts();
 </script>
+
+</body>
+</html>
